fix spacing between subsections in partners page, make spacing across page more consistent (#365)

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -156,6 +156,7 @@ $spacing-values: (
 
 .is-divider {
   border-top: 1px solid $justfix-black;
+  margin: 0;
 
   &.light {
     border-top: 1px solid $justfix-white;
